@@ -33,8 +33,11 @@ $_lang['articles.article_tags'] = 'Tags';
 $_lang['articles.article_title'] = 'Article Title';
 $_lang['articles.article_unpublish'] = 'Unpublish';
 $_lang['articles.articles'] = 'Articles';
+$_lang['articles.articles_manage'] = 'Manage Articles';
 $_lang['articles.articles_none'] = 'No articles yet!';
 $_lang['articles.articles_search'] = 'Search Articles...';
+$_lang['articles.articles_view'] = 'View Articles';
+$_lang['articles.articles_write_new'] = 'Write New Article';
 $_lang['articles.author'] = 'Author';
 $_lang['articles.categories'] = 'Categories';
 $_lang['articles.comments'] = 'Comments';
@@ -43,13 +46,17 @@ $_lang['articles.container'] = 'Articles';
 $_lang['articles.container_alias'] = 'Container Alias';
 $_lang['articles.container_alias_desc'] = 'The web friendly URL that will be used to calculate the URL of this Articles Container.';
 $_lang['articles.container_create_here'] = 'Create Articles Here';
+$_lang['articles.container_delete'] = 'Delete Articles Container';
 $_lang['articles.container_description'] = 'Description';
 $_lang['articles.container_description_desc'] = 'A short description of your Articles container.';
-$_lang['articles.container_settings'] = 'Container Settings';
 $_lang['articles.container_menutitle_desc'] = 'The title used when displayed in a navigation menu.';
 $_lang['articles.container_new'] = 'New Articles Container';
+$_lang['articles.container_publish'] = 'Publish Articles Container';
+$_lang['articles.container_settings'] = 'Container Settings';
 $_lang['articles.container_title'] = 'Container Title';
 $_lang['articles.container_title_desc'] = 'The title of your Articles Container.';
+$_lang['articles.container_undelete'] = 'Undelete Articles Container';
+$_lang['articles.container_unpublish'] = 'Unpublish Articles Container';
 $_lang['articles.content'] = 'Content';
 $_lang['articles.filter_ellipsis'] = 'Filter...';
 $_lang['articles.publishedon'] = 'Published On';
